# dm

./: .gitignore  LICENSE.md  README.md
docs/: report.tex
docs/diagrams/: architecture.mmd
server/: go.mod  main.go
simulator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  db.cpp  db.h  main.cpp  simulator.cpp  simulator.h  traffic_simulator
sql/: db_create.sql  db_data.sql  db_test.sql  db_watcher_test.sql
sql/report/: srs.md  xml_input_spec_fixed.md
sql/xml/: eca-rules-example.xml  eca-rules.xsd
watcher/: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  watcher
watcher/include/watcher/: config.hpp  connection.hpp  dispatcher.hpp  listener.hpp
watcher/include/watcher/handlers/: sensor_handler.hpp  signal_handler.hpp
watcher/include/watcher/rules/: rule_loader.hpp
watcher/src/: config.cpp  connection.cpp  dispatcher.cpp  listener.cpp  main.cpp
watcher/src/handlers/: sensor_handler.cpp  signal_handler.cpp
watcher/src/rules/: rule_loader.cpp
